re-arranged website structure

--- a/DateMe.html
+++ b/DateMe.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>DateMePlz</title>
-        <link href="DateMe.css" rel="stylesheet">
+        <link href="assets/css/DateMe.css" rel="stylesheet">
     </head>
     <body>
         <div class="name" id="name">
@@ -25,14 +25,14 @@
                 <h2>Photos</h2>
             </div>
             <div class="collage-pics">
-                <img src="Me/headshot4.jpg" id="collage-one">
-                <img src="Me/cassie1.jpg" id="collage-two" >
-                <img src="Me/snowman1.jpg" id="collage-three">
-                <img src="Me/group3.jpg" id="collage-four">
-                <img src="Me/ricky1.png" id="collage-five">
-                <img src="Me/themoose2.jpg" id="collage-six">
-                <img src="Me/group1.jpg" id="collage-seven">
-                <img src="Me/cave2.png" id="collage-eight">
+                <img src="images/Me/headshot4.jpg" id="collage-one">
+                <img src="images/Me/cassie1.jpg" id="collage-two" >
+                <img src="images/Me/snowman1.jpg" id="collage-three">
+                <img src="images/Me/group3.jpg" id="collage-four">
+                <img src="images/Me/ricky1.png" id="collage-five">
+                <img src="images/Me/themoose2.jpg" id="collage-six">
+                <img src="images/Me/group1.jpg" id="collage-seven">
+                <img src="images/Me/cave2.png" id="collage-eight">
             </div>
         </section>
         
