--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DateMePlz</title>
         <link href="assets/css/DateMe.css" rel="stylesheet">
     </head>
@@ -86,7 +87,7 @@
                     <div class="jill" id="jill">
                         <figure>
                             <h4> Jill (ex)</h4>
-                            <img src="jill.png" width="220" height="220">
+                            <img src="images/jill.png" width="220" height="220">
                             <figcaption> "He was pretty cool. Anyway, have I told you about the tokamak I'm working on? Its name is Pegasus 3, and..." *tells you about the plasma device* (she actually said this) </figcaption>
                         </figure>
                     </div>
@@ -95,7 +96,7 @@
                     <div class="jenna" id="jenna">
                         <figure>
                             <h4> Jenna (ex) </h4>
-                            <img src="nurse.png" width="220" height="220">
+                            <img src="images/nurse.png" width="220" height="220">
                             <figcaption> "He keeps beating me at minigolf, what's his problem?" (Paraphrased) </figcaption>
                         </figure>
                     </div>
@@ -104,7 +105,7 @@
                     <div class="travis" id="travis">
                         <figure>
                             <h4> Travis (friend) </h4>
-                            <img src="mountain_bike.png" width="220" height="220">
+                            <img src="images/mountain_bike.png" width="220" height="220">
                             <figcaption> "He can solve easy sudokus in under 30 minutes. Which isn't that impressive, now that I think about it." </figcaption>
                         </figure>
                     </div>
@@ -113,7 +114,7 @@
                     <div class="therapist" id="therapist">
                         <figure>
                             <h4> Therapist (my therapist) </h4>
-                            <img src="therapist.png"  width="220" height="220">
+                            <img src="images/therapist.png"  width="220" height="220">
                             <figcaption> "Wow, Will. It sounds like you're in the upper echelon of men in the world -- nay, in all of history. I, for one, as an unbiased party, am shocked you are still single." (Paraphrased, at the very least) </figcaption>
                         </figure>
                     </div>
