changes to photo padding, font size, and testimonial padding

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <div class="section-headers">
                 <h2>Description</h2>
             </div>
-            <p>Are you looking for a man who's over 6ft tall, makes six figures, and has a fantastic hairline? So is everyone else, keep looking. Are you instead looking for a man who has an incredible and usually not deranged sense of humor, keeps promises, takes care of you when you're sick, celebrates your accomplishments, shows interest in your hobbies, and is slightly (barely) above average looking? Then look no further! Scroll down to continue reading about this awesome dude.</p>
+            <p>Are you looking for a man who's over 6ft tall, makes six figures, and has a fantastic hairline? So is everyone else, good luck.</p>
+            <p>Are you instead looking for a man who has an incredible and usually not deranged sense of humor, keeps promises, takes care of you when you're sick, celebrates your accomplishments, shows interest in your hobbies, and is slightly (barely) above average looking? Then look no further! Scroll down to continue reading about this awesome dude.</p>
         </section>
 
         <section class="sections" id="photos">
@@ -125,13 +126,11 @@
     </body>
     <footer>
         <section class="sections">
-            <section class="section-headers" id="contact-info">
+            <div class="section-headers" id="contact-info">
                 <h2>Contact Information</h2>
-            </section>
+            </div>
         </section>
-            <section>
-                <p>Feel free to text me and say hello!</p>
-            </section>
+            <p>Feel free to text me and say hello!</p>
         <strong>
             <p>Phone: (805)-729-8406</p>
             <p>Email: wkwakow@gmail.com</p>
