took out first sentence of description

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
             <div class="section-headers">
                 <h2>Description</h2>
             </div>
-            <p>Are you looking for a man who's over 6ft tall, makes six figures, and has a fantastic hairline? So is everyone else, good luck.</p>
-            <p>Are you instead looking for a man who has an incredible and usually not deranged sense of humor, keeps promises, takes care of you when you're sick, celebrates your accomplishments, shows interest in your hobbies, and is slightly (barely) above average looking? Then look no further! Scroll down to continue reading about this awesome dude.</p>
+            <p>Are you looking for a man who has an incredible and usually not deranged sense of humor, keeps promises, takes care of you when you're sick, celebrates your accomplishments, shows interest in your hobbies, and is slightly (barely) above average looking? Then look no further! Scroll down to continue reading about this awesome dude.</p>
         </section>
 
         <section class="sections" id="photos">
