removing identifying information, using different picture of jay

--- a/index.html
+++ b/index.html
@@ -88,27 +88,27 @@
             </div>
             <ul>
                 <li>
-                    <div class="jill" id="jill">
+                    <div class="jay" id="jay">
                         <figure>
-                            <h4> Jill (ex)</h4>
-                            <img src="images/jill.png" width="220" height="220">
-                            <figcaption> "He was pretty cool. Anyway, have I told you about the tokamak I'm working on? Its name is Pegasus 3, and..." *tells you about the plasma device* (she actually said this) </figcaption>
+                            <h4> Jay (ex)</h4>
+                            <img src="images/jay2.png" width="220" height="220">
+                            <figcaption> "Yeah, he's pretty cool. Anyway, have I told you about the plasma tokamak I work on? Its the Pegasus-III spherical tokamak, and..." *tells you about spherical tokamak* (she actually said this) </figcaption>
                         </figure>
                     </div>
                 </li>
                 <li>
-                    <div class="jenna" id="jenna">
+                    <div class="juliet" id="juliet">
                         <figure>
-                            <h4> Jenna (ex) </h4>
+                            <h4> Juliet (ex) </h4>
                             <img src="images/nurse.png" width="220" height="220">
                             <figcaption> "He keeps beating me at minigolf, what's his problem?" (Paraphrased) </figcaption>
                         </figure>
                     </div>
                 </li>
                 <li>
-                    <div class="travis" id="travis">
+                    <div class="trevor" id="trevor">
                         <figure>
-                            <h4> Travis (friend) </h4>
+                            <h4> Trevor (friend) </h4>
                             <img src="images/mountain_bike.png" width="220" height="220">
                             <figcaption> "He can solve easy sudokus in under 30 minutes. Which isn't that impressive, now that I think about it." </figcaption>
                         </figure>
