--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <figure>
                             <h4> Jay (ex)</h4>
                             <img src="images/jay2.png" width="220" height="220">
-                            <figcaption> "Yeah, he's pretty cool. Anyway, have I told you about the plasma tokamak I work on? Its the Pegasus-III spherical tokamak, and..." *tells you about spherical tokamak* (she actually said this) </figcaption>
+                            <figcaption> "Yeah, he's pretty cool. Anyway, have I told you about the plasma device I work on? Its the Pegasus-III spherical tokamak, and..." *tells you about spherical tokamak* (she actually said this) </figcaption>
                         </figure>
                     </div>
                 </li>
