changed OMSCS comment

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h4>Skills and miscellaneous</h4>
                     <ul>
                         <li>Plays a musical instrument (oboe)</li>
-                        <li>Attends Georgia Tech's online Master's of CS program (reasonably intelligent. Perhaps, even, average.)</li>
+                        <li>Attends Georgia Tech's online Master's of CS program (reasonably intelligent. Smart but maybe perpetually unemployed.)</li>
                         <li>Has experience mushing sled dogs, so if you're ever stranded in a Canadian winter with eight trained dogs, he can get you to safety</li>
                         <li>Studied cosmology in college, so you can have romantic star-gazing dates while he tells you about the heat death of the universe</li>
                     </ul>
