changed therapist phrasing

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <figure>
                             <h4> Therapist (my therapist) </h4>
                             <img src="images/therapist.png"  width="220" height="220">
-                            <figcaption> "Wow, Will. It sounds like you're in the upper echelon of men in the world -- nay, in all of history. I, for one, as an unbiased party, am shocked you are still single." (Paraphrased, at the very least) </figcaption>
+                            <figcaption> "Wow, Will. It sounds like you're in the upper echelon of men in the world. I, for one, as an unbiased party, am shocked you are still single." (Paraphrased, at the very least) </figcaption>
                         </figure>
                     </div>
                 </li>
